# TextReaderOverlay-NX

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
.github/workflows/: buildSwitch.sh  main.yml
include/: CustomFooterOverlayFrame.hpp  FavoritesMenu.hpp  FileSelect.hpp  HelpMenu.hpp  MainMenu.hpp  Overlay.hpp  SettingsMenu.hpp  StandardOverlayFrame.hpp  TextReader.hpp
source/: CustomFooterOverlayFrame.cpp  FavoritesMenu.cpp  FileSelect.cpp  HelpMenu.cpp  LogMenu.cpp  MainMenu.cpp  SettingsMenu.cpp  StandardOverlayFrame.cpp  TextReader.cpp  main.cpp
